# cg100-embedded-sci-library

./: README.md  pyproject.toml
fractals_chaos/: barnsley_fern.py  burning_ship.py  dragon_curve.py  fractal_lib.py  julia_set.py  koch_snowflake.py  logistic_bifurcation.py  mandelbrot_set.py
geometry_visual/: shapes.py  shapes_lib.py
number_theory/: prime_sieve_eratosthenes.py
physics/: psi_fx.py  psi_fx_lib.py  psi_pico.py
